--- a/src/styles.css
+++ b/src/styles.css
@@ -119,3 +119,14 @@ input {
 .min {
   font-weight: lighter;
 }
+
+.container-site {
+  border: none;
+  font-size: 10px;
+  padding: 10px;
+  padding-left: 35px;
+  margin-top: 0;
+  width: 600px;
+  background: none;
+  color: #f1f1f1;
+}
