--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body {
   border: 1px solid #3e8fcf;
   border-radius: 30px;
   padding: 20px;
-  margin-top: 30px;
+  margin-top: 20px;
   width: 600px;
   position: relative;
   background: rgba(0, 0, 0, 0.1);
@@ -65,6 +65,7 @@ form {
 .currentTemp {
   font-size: 55px;
   margin: 0;
+  padding-left: 25px;
   text-align: center;
 }
 
@@ -72,6 +73,12 @@ form {
   position: relative;
   top: -20px;
   font-size: 20px;
+  color:white;
+  cursor: pointer;
+}
+
+.units-hover:hover {
+color:#3e8fcf;
 }
 
 .units-feels {  
