--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body {
   border: 1px solid #3e8fcf;
   border-radius: 30px;
   padding: 20px;
-  margin-top: 20px;
+  margin-top: 15px;
   width: 600px;
   position: relative;
   background: rgba(0, 0, 0, 0.1);
@@ -48,14 +48,18 @@ form {
 }
 
 .timeDay {
-  line-height: 18px;
-  padding: 0;
+  font-size: 13px;
 }
 
 .weatherDescription {
-  text-align: left;
-  line-height: 32px;
-  padding-left: 65px;
+  font-size: 14px;
+  line-height: 30px;
+  padding-left: 55px;
+}
+
+.img-description {
+  margin-right: 5px;
+  width: 22px;
 }
 
 .col-currentTemp {
@@ -64,31 +68,30 @@ form {
 
 .currentTemp {
   font-size: 55px;
-  margin: 0;
-  padding-left: 25px;
-  text-align: center;
+  padding-left: 60px;
 }
 
 .currentTemp .units {
   position: relative;
   top: -20px;
   font-size: 20px;
-  color:white;
+  color: white;
   cursor: pointer;
 }
 
 .units-hover:hover {
-color:#3e8fcf;
+  color: #3e8fcf;
 }
 
-.units-feels {  
+.units-feels {
   position: relative;
   top: -2px;
   font-size: 10px;
 }
 
 .description {
-  margin: 0;
+  font-size: 14px;
+  margin-top: 10px;
 }
 
 .tempDay {
@@ -106,10 +109,12 @@ input {
 .weatherWeek {
   text-align: center;
   margin-top: 35px;
+  margin-bottom: 20px;
 }
 
 .col_nextWeather {
-  padding: 10px 0;
+  margin: 0 auto;
+  padding: 0;
   border-radius: 20px;
   width: 85px;
 }
@@ -138,15 +143,15 @@ input {
   padding-left: 25px;
 }
 
-.max {
+.max-temp {
   padding: 8px 0;
-  font-size: 17px;
   font-weight: bold;
 }
 
-.min {
+.min-temp {
   font-weight: lighter;
-  opacity: 0.6;
+  font-size: 15px;
+  opacity: 0.7;
 }
 
 .container-site {
